archive/v2.4.2/README.md
<div align="center">

<img src="images/BiLivexlogo.jpg" alt="BiLivex Logo" width="110"/>

# BiLivex 🎮

**哔哩哔哩直播间增强插件（油猴 Tampermonkey）**

参考斗鱼 [DouyuEx](https://greasyfork.org/zh-CN/scripts/394497-douyuex-%E6%96%97%E9%B1%BC%E7%9B%B4%E6%92%AD%E9%97%B4%E5%A2%9E%E5%BC%BA%E6%8F%92%E4%BB%B6) 的用户脚本设计，为 B 站直播间（live.bilibili.com）量身重写的增强脚本。

[![Greasy Fork](https://img.shields.io/badge/GreasyFork-590601-%23FB7299)](https://greasyfork.org/zh-CN/scripts/590601)
[![License: MIT](https://img.shields.io/badge/License-MIT-yellow.svg)](LICENSE)

</div>

---

## 📢 引言

各位玩小将，是否因为在 B 站看直播无法 **+1** 而手痒难耐？🖐️

管人痴，是否因为想在直播间臊皮、跟上弹幕节奏，却还要麻烦地复制粘贴？😩

那么，试试 **BiLivex** —— 弹幕一键 +1，带节奏从此告别复制粘贴！

## 📢 升级提示

2.4.2 改善漂浮弹幕悬停边界：只有直播画面内实际可见的弹幕部分可以触发悬停；尚未完全进入或正在离开画面的内容继续保持裁剪，高亮框不会伸入评论区。从右侧进入且尚未完全展示的弹幕，其“+1／收藏”操作栏改在左侧展开。

### 独轮车使用

1. 点击原生“发送”按钮左侧的轮椅图标，打开独立小窗口。拖动标题栏可以移动窗口，右上角可收起；收起不等于停止。
2. 选择“文字”，在每个单行文本框中填写一条内容，也可展开“从收藏夹添加”快速加入收藏弹幕；设置发送间隔和自动停止秒数。0 表示不限时。预览会自动计算小尾巴与长文本切分。
3. 选择“表情”后，按原生表情包分组浏览。点击带封面的标题可展开或折叠；折叠后仍显示封面、表情数量和已选数量。点选多个表情可按顺序循环，选择按房间分别保存。
4. 检查内容后点击“开始”，同一个按钮变为“暂停”；点击“暂停”立即停止当前任务并恢复为“开始”。文字和表情首条立即发送。

间隔最少 5 秒。随机间隔、单条长度、返回房间后自动恢复位于“更多发送选项”。恢复默认关闭，启用后有 3 秒可取消倒计时。用户正在输入时自动等待，不覆盖草稿；结果不明确时不会马上重发，连续两次未确认会停止。

收藏库升级为版本 2，保留原条目并在首次写入前备份旧存储。“仅当前直播间”按来源筛选，旧收藏的未知来源不会被猜测分配。收藏夹中的“车”按钮和独轮车内的收藏选择器共用稳定收藏 ID。导入支持版本 1 和版本 2，确认预览后才提交。跨标签保存使用浏览器 Web Locks；不可用或版本冲突时拒绝覆盖，并保留草稿。

表情车参考 BLSPAM 的“按房间保存选择、按选择顺序循环”逻辑，但继续使用 B 站原生表情面板和发送控件，不读取 Cookie，也不直接调用弹幕发送接口。普通表情经原生输入框发送，房间专属表情点击原生表情项；未解锁或当前房间不可用的表情不会启动。状态中的“已确认”指观测到原生输入框清空或新本人弹幕，不代表服务器回执。

轮椅图形使用 Twemoji，素材许可见 [第三方素材说明](THIRD_PARTY_NOTICES.md)。

## ✨ 核心功能

| 功能             | 说明                                                               |
| -------------- | ---------------------------------------------------------------- |
| **独轮车** | 多条文字与收藏序列、长文本完整切分、当前房间表情循环、固定或随机间隔与自动停止；保护用户输入，换房停车，同房间仅允许一个标签页运行 |
| **评论区快捷操作** | 点击评论区弹幕，在 B 站原生菜单末尾使用「弹幕+1 / 复制 / 收藏」；操作后菜单自动关闭，成功提示显示在鼠标附近 |
| **漂浮弹幕 +1** | 鼠标悬停直播画面内实际可见的弹幕部分，弹幕按画面边界高亮并出现「+1／收藏」操作栏，通过 B 站原生控件发送同内容弹幕 |
| **弹幕小尾巴**      | 发送弹幕（+1 或自行输入）时自动在末尾附加预设文本（如「你好」→「你好喵」）；独立小窗口可开关 + 编辑文本          |
| **一键点赞 30 连击** | 一键连续点赞 30 次，点亮 B 站粉丝团灯牌                                          |
| **同步时间**       | 播放器底栏直播持续时间右侧显示原生风格按钮，一键跳到最后一段缓冲区的最新位置，不改变原有播放 / 暂停状态 |
| **更多设置**       | 可选自动最高画质、自动网页模式和防止 P2P 上传，三个开关默认关闭，可按需启用 |
| **主题切换**       | 面板顶部一键切换「B 站蓝」/「B 站粉」主题，配色联动全局（标题 / 开关 / 按钮 / 弹幕高亮 / 反馈动画），设置持久化 |
| **侧边悬浮主菜单**    | 蓝 / 粉主题悬浮面板，置于直播间右侧，可折叠、可拖拽，所有设置自动保存                             |
| **弹幕收藏夹**        | 收藏常用弹幕，支持搜索、编辑、删除、导入导出，并可一键填入、发送或加入独轮车序列                         |
| **自动检查更新**      | 周期检测新版本，发现更新时在悬浮球旁弹出提示，可一键打开油猴更新页升级                |

## 📸 效果预览

| 未开启面板                                                                                          | 开启面板（蓝色主题）                                                                                     |
| ---------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------- |
| ![](images/preview-off.png) | ![](images/preview-on.png) |

## 📥 安装

### 方式一：Greasy Fork（推荐）

- 直达链接：https://greasyfork.org/zh-CN/scripts/590601
- 或直接在 Greasy Fork 搜索「BiLivex」安装

### 方式二：手动安装

1. 浏览器安装 Tampermonkey（油猴）扩展
2. 打开油猴管理面板 → 新建脚本 → 删除模板内容 → 粘贴 `bilive-enhance.user.js` 全部内容 → 保存
   （或直接双击 `.user.js` 文件，油猴会弹出安装页）
3. 打开任意 B 站直播间（live.bilibili.com/房间号），右侧出现 BiLivex 面板即生效

## 🎯 使用说明

- **评论区快捷操作**：点击聊天区某条弹幕，在 B 站原生菜单末尾选择「弹幕+1」「复制」或「收藏」；三项始终可用，不受主菜单“弹幕+1”开关影响
- **漂浮弹幕+1**：鼠标悬停直播画面内实际可见的弹幕部分即可冻结；未完全进入画面的内容和高亮框保持裁剪，操作栏改在左侧展开。主菜单“弹幕+1”开关只控制这一入口
- **小尾巴设置**：面板中「小尾巴」开关 + 「尾巴内容」输入框（默认「喵」）
- **自己的弹幕**：保留 B 站原生本人弹幕标识，不额外伪造样式
- **同步时间**：鼠标移入直播画面唤出底部操作栏，点击直播持续时间右侧的圆形箭头按钮，即可追到当前缓冲区的最新画面
- **主题设置**：面板顶部切换蓝色 / 粉色主题，偏好自动保存
- **持久化**：所有设置自动保存（GM_setValue / GM_getValue），刷新 / 换房不丢失
- **弹幕收藏夹**：点击面板中的「收藏」打开收藏夹；支持关键词搜索、编辑、删除、导入导出。点击收藏文本可填入聊天框，点击「+1」可发送同内容弹幕，点击「车」可加入文字独轮车序列。
- **自动检查更新**：每 1 小时自动检测一次新版本，发现更新时在悬浮球旁弹出提示；点击「忽略」不再提示该版本，点击「更新」在新标签页打开油猴更新页完成升级

## 🗺️ 开发计划

- [x] **独轮车功能**：保留文字和表情两种模式；默认关闭，发送间隔至少 5 秒，并保留明确停车与风险提示 ✅

> 欢迎提交 Issue / PR，一起让 BiLivex 更好用！

## 📜 版本历史

<details open>
<summary><b>v2.4.2</b>（2026-09-19）：改善漂浮弹幕悬停边界</summary>

- 画面外的隐藏弹幕区域不再触发或维持悬停，只允许命中弹幕与直播画面的可见交集。
- 部分进入或离开画面的弹幕继续按播放器边界裁剪，文字、高亮背景和选中框不会越界显示。
- 从右侧进入且尚未完整展示时，操作栏固定展开在左侧；完全展示时仍保持右侧优先。
- 播放器重建期间会及时释放失效的悬停副本和操作栏，避免控件残留到直播内容外。
- 页面离开或换房时立即停止一键点赞；特殊表情“弹幕 +1”也会在原生点击前重新核对房间。

</details>

<details>
<summary><b>v2.4.1</b>（2026-09-17）：完善文字序列、收藏联动与恢复状态</summary>

- 文字独轮车改为每条内容一个单行文本框，避免界面自动换行被误认为多条内容；超过直播间上限的长文本仍按字素簇完整切分。
- 收藏夹增加“车”按钮，独轮车增加可按全部或当前直播间筛选的收藏列表，两处共用收藏 ID 和选择状态。
- 收藏较多时收藏夹与独轮车选择列表保持可滚动，不再挤压隐藏尾部条目。
- 修复表情车刷新后无法按房间自动恢复，以及停止一个房间时可能覆盖其他标签页恢复记录的问题。
- “其他房间运行状态”排除当前房间，并在展开期间自动刷新和显示空状态。

</details>

<details>
<summary><b>v2.4.0</b>（2026-09-12）：新增独轮车并完成活动页适配</summary>

- 增加文字车和表情车，支持固定／随机间隔、自动停止、输入保护、换房停车与同房间跨标签互斥。
- 表情按 B 站原生表情包分类折叠，保留封面、表情数和已选数；按房间保存选择并按选择顺序循环。
- 独轮车使用跟随主菜单主题的独立毛玻璃窗口；开始与暂停共用一个按钮，圆形轮椅入口用外圈颜色显示状态。
- 收藏夹与独轮车共用收藏数据，自动整理旧存储并保留收藏文本与来源房间；搜索、编辑、删除、导入导出和快捷发送继续可用。
- 活动页由顶层实例统一维护入口，修复同源 iframe 卡死，以及网页模式下悬浮球、独轮车窗口和长弹幕悬停副本被遮挡或隐藏的问题。
- 自动更新使用完整版本顺序比较，并在页面卸载时回收首次检查和周期检查任务。

</details>

<details>
<summary><b>v2.3.0</b>（2026-09-08）：评论区原生菜单快捷操作</summary>

- 评论区的「弹幕+1 / 复制 / 收藏」迁移到 B 站原生弹幕菜单，删除旧的评论行悬停操作栏。
- 三项评论菜单操作改为常驻；主菜单仅保留控制直播画面入口的“弹幕+1”开关。
- 操作完成后自动关闭原生菜单，复制、收藏和已确认发送的 +1 在鼠标附近显示动态反馈。
- 修复主菜单“收藏”按钮不跟随蓝色 / 粉色主题切换的问题。

</details>

<details>
<summary><b>v2.2.0</b>（2026-09-07）：新增更多播放器设置</summary>

- 新增自动最高画质、自动网页模式和防止 P2P 上传三个可选开关，默认关闭。
- 兼容普通直播间、活动页播放器、慢网首屏、播放器重建和 SPA 换房。
- 优化播放器状态隔离和重试调度，避免重复调用、加载圈残留和旧任务覆盖新状态。

</details>

<details>
<summary><b>v2.1.0</b>（2026-09-06）：新增播放器同步时间</summary>

- 在 B 站播放器原生底栏的直播持续时间右侧加入「同步时间」按钮，尺寸、颜色、间距和交互样式跟随原生操作栏。
- 点击后优先跳到最后一段本地缓冲区末端；无缓冲分段时回退到播放器可拖动区间末端，并保留用户原来的播放 / 暂停状态。
- 兼容控制栏延迟出现、重建、切换直播间和特殊直播间等场景，不覆盖、不替换任何原生控件。

</details>

<details>
<summary><b>旧版本</b>：v2.0.3 及更早版本</summary>

### v2.0.3（2026-09-05）：压缩内置 logo 并移除外部 logo 依赖

- 将面板和油猴元数据使用的 logo 压缩为内置资源，脚本体积减少约 110 KB。
- logo 不再依赖 GitHub 等外部域名，断网或大陆网络环境下仍可正常显示。

### v2.0.2（2026-09-05）：改进 +1 发送体验与跨页面稳定性

- 修复自动更新房间号识别与未定义死代码；引入 ESLint 静态检查。
- 不同页面实例间的开关、主题通过配置实时同步；收藏独立保存，不再覆盖面板配置。
- `+1` 改用 B 站原生控件并明确区分已触发、已确认和未确认超时，绝不因超时自动重发；特殊表情仅走原生表情面板且不追加小尾巴。
- 优化点赞反馈文案，让已触发次数和可观察到的界面反馈次数分别显示。

### v2.0.1（2026-09-05）：修复悬停残框并复刻原生 +1 发送路径

- 修复鼠标移出漂浮弹幕后蓝色悬停框仍残留的问题。
- 全屏模式补齐 B 站原生输入框与发送按钮识别，`+1` 统一走原生控件，保留本人弹幕的原生蓝色标识。
- 支持普通图片表情、文字与表情混合弹幕的内容还原；特殊表情通过 B 站原生表情面板发送。
- 悬停开始即固定文字与表情内容，弹幕节点变化后点击「+1」仍发送最初选中的内容。
- 参考 [bili-danmu-plus1](https://github.com/ZYar-er/bili-danmu-plus1) 的原生发送和表情解析思路。

### v2.0.0（2026-09-05）：重构 +1 与漂浮弹幕悬停逻辑

- 重构 `+1` 发送链路，优先使用 B 站原生聊天输入框和发送按钮。
- 改进漂浮弹幕悬停逻辑，兼容普通直播间、网页模式和全屏模式。
- 删除脚本伪造的本人弹幕蓝框，改为保留 B 站原生本人弹幕标识。
- 自动更新检测除每小时检测外，首次打开直播间和切换新房间时立即检测。
- 保持收藏、主题色、小尾巴、点赞、界面和按钮等既有功能。

### v1.1.9（2026-09-04）：修复特殊直播间悬停弹幕显示问题

- 修复活动 / 特殊直播间网页大窗口和网页全屏模式下，悬停后弹幕本体消失的问题。
- 修复自己发送的弹幕被他人发送相同内容时误标蓝色边框的问题。

- **v1.1.8**（2026-09-04）：
  - 修复 iframe 直播间网页大窗口 / 网页全屏模式下，悬停弹幕后「+1 / 收藏」操作栏不显示或被遮挡的问题——操作栏与悬停弹幕统一挂载，任何窗口模式下都完整可见
  - 修复网页全屏状态下悬停弹幕后弹幕本体消失、只剩操作栏的问题——悬停期间弹幕与操作栏同时完整可见，移开鼠标后原弹幕恢复滚动
  - 修复全屏 / 网页全屏模式下自己发送的漂浮弹幕没有蓝色边框的问题——本人弹幕在悬停与取消悬停后均保持蓝色边框
  - 修复 iframe 直播间贴近画面边缘的弹幕悬停后直接消失的问题——边缘弹幕悬停后按当前位置完整显示
  - 修复悬停带表情图 / 舰长徽章等富文本内容的弹幕时表情被放大、内容显示异常的问题——悬停弹幕与原弹幕外观保持一致

- **v1.1.3**（2026-09-03）：
  - 修复进入直播间时偶现的「操作栏被裁剪或遮挡」问题——刷新页才能恢复的现象消失，现在进入一次即可生效
  - 修复弹幕前面带舰长徽章 / 表情图等富文本前缀时悬停会看到两条重复且文本错位的问题——悬停后的显示与原弹幕内容保持一致
  - 修复自动更新检测过严问题——同一天内发布的新版本不再被「6 小时内查过」挡住；网络瞬时失败也只会记时间用于诊断、不再锁死后续检查；检测窗口缩短为 1 小时

- **v1.1.2**（2026-09-03）：
  - 修复网页全屏下屏幕上方、左侧、右侧约 1/5 区域内的漂浮弹幕，悬停后操作栏无法正常显示的问题——现边缘区域的弹幕悬停后，操作栏也会在屏幕内完整露出
  - 修复左右两侧弹幕悬停固定后操作栏被裁剪或遮挡的痕迹——现操作栏与弹幕分层展示，弹幕本身仍不超出直播画面，操作栏始终完整可见
  - 修复悬停后的弹幕在画面上/下区域的透明度与原弹幕不一致——现悬停弹幕保持与原弹幕一致的透明度，观感自然统一

  - 修复悬停弹幕后滚动页面，弹幕吸附跟随指针、原位置残留副本的问题，现滚动页面即取消悬停，任何时刻只保留一个弹幕
  - 新增自动检查更新：发现新版本时在悬浮球旁弹出提示，可选择「忽略」或「更新」；点击「更新」在新标签页打开油猴更新页

### v1.1.0（2026-09-01）：新增弹幕收藏夹

- 收藏内容长效保存，悬浮窗拖动更跟手。

### v1.0.11（2026-08-29）：优化本人弹幕标识与小尾巴

- 自己发送的弹幕用蓝色边框标出；修复分栏聊天区小尾巴不生效的问题。

- **v1.0.10**（2026-08-15）：修复 iframe 直播间弹幕悬停判定区域偏移、弹幕与 +1 按钮间隙、全屏 +1 无法发送、边缘弹幕悬停文字超出画面等问题

- **v1.0.9**（2026-08-14）：修复长时间悬停弹幕文字消失、悬停弹幕动画恢复、小尾巴重复发送、顶部/底部特殊弹幕命中等问题

- **v1.0.8**（2026-08-13）：修复活动直播间悬浮球拖动弹跳、无法自由定位，以及展开菜单被强制吸附的问题

- **v1.0.7**（2026-08-12）：修复悬浮球右侧收起偏移、漂浮弹幕轻微抖动、弹幕悬停后超出直播画面、左上角闪现已结束弹幕、悬停弹幕与 +1 按钮间空隙导致取消悬停、部分场景 +1 按钮不显示等问题
- **v1.0.6**（2026-08-11）：修复开启插件后直播间漂浮弹幕数量明显变少的问题（评论区能看到消息但画面中弹幕大量缺失），弹幕显示恢复正常；保留悬停残留弹幕自动清理
- **v1.0.5**（2026-08-11）：修复鼠标在画面左上角滑移导致弹幕卡死（已滚出画面/即将结束的弹幕不再冻结，快速滑移自动释放）
- **v1.0.4**（2026-08-11）：修复鼠标在画面左上角滑移导致历史弹幕卡死（自动清理生命周期已结束的弹幕）、悬浮球吸附右侧时展开菜单方向错乱
- **v1.0.3**（2026-08-11）：折叠态悬浮球升级为圆形 logo；修复特殊直播间菜单被遮蔽、悬浮球拖动受限、菜单展开方向错乱、菜单超出网页边界等问题；展开菜单支持边缘吸附
- **v1.0.2**（2026-08-10）：发布版整理
- **v1.0.1**（2026-08-07）：修复面板重建时 document 级监听器累积泄漏、弹幕按钮重建时旧监听器未清理

</details>

## 🙏 致谢

- 灵感来源及代码设计参考自 **DouyuEx 作者小淳**：[Bilibili 空间](https://space.bilibili.com/193482)，感谢淳圣开源 💙
- 本项目约 80% 内容由 **vibe coding** 产出，欢迎使用、Star与转发！

---

<div align="center">

⭐ 如果这个插件帮到了你，欢迎 Star 支持一下！

</div>
